--- a/src/app/theme/layout/admin/nav-bar/nav-logo/nav-logo.component.html
+++ b/src/app/theme/layout/admin/nav-bar/nav-logo/nav-logo.component.html
@@ -2,7 +2,7 @@
   <!-- [ Header Topbar ] start -->
   <a [routerLink]="['/default/']" class="b-brand">
     <!-- ========   change your logo hear   ============ -->
-    <img src="assets/images/logo-dark.svg" alt="" class="logo logo-lg" />
+    <img src="assets/images/logo.png" alt="" class="logo logo-lg" />
   </a>
   <!-- ======= Menu collapse Icon ===== -->
   <div class="pc-h-item">
