--- a/src/app/demo/default/default.component.scss
+++ b/src/app/demo/default/default.component.scss
@@ -1,6 +1,23 @@
+@import 'node_modules/@syncfusion/ej2-base/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-inputs/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-lists/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-calendars/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-angular-base/styles/material.css';
+@import 'node_modules/@syncfusion/ej2-angular-calendars/styles/material.css';
+
 .nav-tabs {
   border-bottom: none !important;
 }
 .avtar:not([class*='bg-']) {
   background: rgba(0, 0, 0, 0.15);
 }
+
+.input-date{
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
+
